force-app/main/default/objects/KimbleOne__ActivityRole__c/KimbleOne__ActivityRole__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__ConfigGuide</customHelpPage>
    <label>Activity Role</label>
    <nameField>
        <label>Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Roles</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>