force-app/main/default/objects/KimbleOne__ActivityRole__c/fields/KimbleOne__Code__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Code__c</fullName>
    <label>Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>