force-app/main/default/objects/KimbleOne__ActivityRole__c/fields/KimbleOne__ProductDomain__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ProductDomain__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product Domain</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ProductDomain__c.KimbleOne__IsResourced__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ProductDomain__c</referenceTo>
    <relationshipLabel>Activity Roles</relationshipLabel>
    <relationshipName>ActivityRoles</relationshipName>
    <type>Lookup</type>
</CustomField>