force-app/main/default/objects/KimbleOne__ActivityRole__c/fields/KimbleOne__ResourcedActivityType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourcedActivityType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resourced Activity Type</label>
    <referenceTo>KimbleOne__ResourcedActivityType__c</referenceTo>
    <relationshipLabel>Activity Roles</relationshipLabel>
    <relationshipName>ActivityRoles</relationshipName>
    <type>Lookup</type>
</CustomField>